20070115 fuse.[ch],machine.c,sound.[ch],tape.c: make the sound lifecycle be
         treated more like the uidisplay - initialised and ended based on machine
         lifecycle (fixes bug #1582087) (Fred).
20070115 ChangeLog: add reference to new CoreAudio sound driver (Fred).
20070117 fuse.c, if1.[ch]: free memory on exit. Use C89-style struct
	 initialisation (patch #1637020) (Gergely Szasz).
20070120 if1.c: reduce magic number count.
20070122 display.c: inline get_beam_position and display_dirty_chunk for more
         speed (Fred).
20070128 settings.dat,ui/options.dat,ui/gtk/gtkdisplay.c,ui/sdl/sdldisplay.c,
         ui/scaler/{scaler.[ch],scaler_internals.h,scalers.c}: add new PAL TV
         scalers that attempt to reproduce TV-esque colour reproduction (patch
         #1537920) (Gergely Szasz).
20070128 ChangeLog,man/fuse.1: add information about PAL scalers (Fred).
20070128 ui/{fb/fbdisplay.c,ggi/ggidisplay.c,gtk/gtkdisplay.c,
         svga/svgadisplay.c,win32/win32display.c,xlib/xdisplay.c}: fix hires
         Timex display (Fred).
20070128 man/fuse.1: updates.
20070129 man/fuse.1: add documentation for "MDR cartridge len" and "Snap
         joystick prompt" (Fred).
20070129 ui/scaler/scalers.c: corrections to YUV to RGB conversions etc.
         (more from patch #1537920) (Gergely Szasz).
20070202 <almost everything>: change my e-mail address to @shadowmagic and
	 remove my postal address.
20070202 TAG: Release-0_8_0-trunk
20070202 BRANCH: Release-0_8_0-branch
20070202 TAG: Release-0_8_0-pre1 (Release-0_8_0-branch)
20070204 sound.c: don't disable sound completely if we don't enable sound
         after an unpause (fixes bug #1648246) (Fred).
20070204 rzx.c: use new libspectrum_rzx_playback_frame() API to allow
	 loading of snapshots (necessary for playing back RZX files made with
	 SPIN's "RZX Pause" feature).
20070207 man/fuse.1: document that metacity needs --no-aspect-hint
	 (Thanks, Stuart Brady and dave in #spin) (Release-0_8_0-branch).